# jlink_wifi_v831_software

./: CMakeLists.txt  README.md  export_toolchain.sh  start_jlink.sh  v831_setup.cmake
application/include/: cfg.h  config.h.in  jlink_ctl.h  key.h  led.h  main.h  udp_ctl.h  web.h  wifi_ctl.h
application/source/: cfg.c  jlink_ctl.c  key.c  led.c  main.c  udp_ctl.c  web.c  wifi_ctl.c
etc/: zlog-file.conf  zlog-stdout.conf
resource/www/: config1.html  login.html
utilities/include/: c2000.h  checksum.h  crc.h  file.h  filter.h  gpio.h  process.h  rngbuf.h  str.h  systick.h  utilities.h
utilities/source/: c2000.c  checksum.c  crc.c  file.c  filter.c  gpio.c  process.c  rngbuf.c  str.c  systick.c  utilities.c
